# wuji-lobster-legion

./: soullens-v6.6-opensource.html  龙虾军团-原始需求.txt
.claude/skills/mulerouter-skills/: .env.example  README.md  SKILL.md  pyproject.toml
.claude/skills/mulerouter-skills/core/: __init__.py  client.py  config.py  image.py  registry.py  task.py
.claude/skills/mulerouter-skills/models/: __init__.py  base.py
.claude/skills/mulerouter-skills/models/alibaba/: __init__.py
.claude/skills/mulerouter-skills/models/alibaba/wan2.1-kf2v-plus/: generation.py
.claude/skills/mulerouter-skills/models/alibaba/wan2.1-vace-plus/: generation.py
.claude/skills/mulerouter-skills/models/alibaba/wan2.2-i2v-flash/: generation.py
.claude/skills/mulerouter-skills/models/alibaba/wan2.2-i2v-plus/: generation.py
.claude/skills/mulerouter-skills/models/alibaba/wan2.2-t2v-plus/: generation.py
.claude/skills/mulerouter-skills/models/alibaba/wan2.5-i2i-preview/: generation.py
.claude/skills/mulerouter-skills/models/alibaba/wan2.5-i2v-preview/: generation.py
.claude/skills/mulerouter-skills/models/alibaba/wan2.6-i2v/: __init__.py  (+1 more)
.claude/skills/mulerouter-skills/models/google/: __init__.py
.claude/skills/mulerouter-skills/models/midjourney/: __init__.py
.claude/skills/mulerouter-skills/models/openai/: __init__.py
.claude/skills/mulerouter-skills/references/: MODELS.md  REFERENCE.md
.claude/skills/mulerouter-skills/scripts/: list_models.py
.claude/skills/mulerouter-skills/tests/: __init__.py  test_client.py  test_config.py  test_image.py  test_registry.py  test_task.py
(+196 files in other folders)
